[project]
name = "algorithm_package"
version = "0.1.0"
description = "Алгоритмический мини-пакет: факториал, Фибоначчи, сортировки и стек."
requires-python = ">=3.13"
dependencies = [
  "pytest>=9.0.1",
  "pytest-cov>=7.0.0",
  "typer>=0.12.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
  "pytest-cov>=5.0.0",
]

[tool.pytest]
pythonpath = ["src"]
addopts = [
  "--cov=algopack",
  "--cov-branch",
  "--cov-report=term-missing",
  "-q",
]

[tool.coverage.run]
source = ["algopack"]
branch = true
omit = ["*/__init__.py", ]


[tool.coverage.report]
show_missing = true
fail_under = 80

