[project]
name = "algorithm_package"
version = "0.1.0"
description = "Алгоритмический мини-пакет: факториал, Фибоначчи, сортировки и стек."
requires-python = ">=3.13"
dependencies = [
  "pytest>=9.0.1",
  "pytest-cov>=7.0.0",
  "typer>=0.20.0",
]

[tool.pytest]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = [
  "--cov=algopack",
  "--cov-report=term-missing",
]

[tool.coverage.run]
source = ["algopack"]
branch = true


[tool.coverage.report]
show_missing = true
fail_under = 80
omit = [
  "*/__init__.py",
  "*/utils/*"
]

